added more pages

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body{
-    align-items: center;
+    
 }
 
 img{
     width: 50%;
-    height: auto;
+    height: 50%;
     padding-right: 2455px;
+
 }
 
 ul.slider { display: none; }
@@ -13,20 +14,10 @@ ul.slider { display: none; }
 .scrapBook {
     background-color: blanchedalmond;
     border: 24px;
-    border-color: rgb(59, 101, 17);
+    padding: 45px;
 }
 h1{
     text-align: center;
     font-family: fantasy;
-}
-
-.Pictures{
-    background-color: aquamarine;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: 1fr, 1fr;
-    grid-template-rows: auto;
 }
 
