--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body{
     
 }
 
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 img{
     width: 50%;
     height: 50%;
@@ -9,13 +15,16 @@ img{
 }
 
 
-ul.slider { display: none; }
+ul.slider { 
+    display: none; 
+}
 
 .scrapBook {
     background-color: blanchedalmond;
     border: 24px;
     padding: 45px;
 }
+
 h1{
     text-align: center;
     font-family: fantasy;
